[gd_scene load_steps=3 format=3 uid="uid://db6rxffmwo8ot"]

[ext_resource type="Script" uid="uid://bd3io1gffnwvf" path="res://Scenes/MainMenu/MainMenu.gd" id="1_klogk"]
[ext_resource type="Script" uid="uid://nnfdoa433m7d" path="res://Scenes/MainMenu/SettingsMenu.gd" id="2_8saeu"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_klogk")

[node name="Bg" type="ColorRect" parent="."]
custom_minimum_size = Vector2(1280, 720)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.497363, 0.373757, 0.230642, 1)

[node name="Titulo" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -149.0
offset_right = 149.0
offset_bottom = 67.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 48
text = "AAA SOY TEA"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BoxContainer" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -25.0
offset_right = 300.0
offset_bottom = 25.0
grow_vertical = 2
theme_override_constants/separation = 15
vertical = true

[node name="StartGame" type="Button" parent="BoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Start Game"

[node name="Settings" type="Button" parent="BoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Settings
"

[node name="Quit" type="Button" parent="BoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Quit
"

[node name="SettingsMenu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_8saeu")

[node name="Panel" type="Panel" parent="SettingsMenu"]
custom_minimum_size = Vector2(1000, 550)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -275.0
offset_right = 500.0
offset_bottom = 275.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="SettingsMenu/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -103.5
offset_top = 20.0
offset_right = 103.5
offset_bottom = 62.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 30
text = "Settings Menu"

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsMenu/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -122.5
offset_right = 150.0
offset_bottom = 122.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Audio" type="Button" parent="SettingsMenu/Panel/VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Audio"

[node name="Video" type="Button" parent="SettingsMenu/Panel/VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Video"

[node name="Controls" type="Button" parent="SettingsMenu/Panel/VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Controls"

[node name="Back" type="Button" parent="SettingsMenu/Panel/VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Back"

[node name="Video" type="Control" parent="SettingsMenu"]
custom_minimum_size = Vector2(1000, 550)
anchors_preset = 0
offset_left = -480.0
offset_top = -255.0
offset_right = 520.0
offset_bottom = 295.0

[node name="VideoPanel" type="Panel" parent="SettingsMenu/Video"]
custom_minimum_size = Vector2(1000, 550)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VideoOptions" type="BoxContainer" parent="SettingsMenu/Video/VideoPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
vertical = true

[node name="ScreenModeBox" type="HBoxContainer" parent="SettingsMenu/Video/VideoPanel/VideoOptions"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingsMenu/Video/VideoPanel/VideoOptions/ScreenModeBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Screen Mode"

[node name="ScreenModeBtn" type="OptionButton" parent="SettingsMenu/Video/VideoPanel/VideoOptions/ScreenModeBox"]
layout_mode = 2

[node name="ResolutionBox" type="HBoxContainer" parent="SettingsMenu/Video/VideoPanel/VideoOptions"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingsMenu/Video/VideoPanel/VideoOptions/ResolutionBox"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
text = "Resolution"

[node name="ResolutionBtn" type="OptionButton" parent="SettingsMenu/Video/VideoPanel/VideoOptions/ResolutionBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VSyncBox" type="HBoxContainer" parent="SettingsMenu/Video/VideoPanel/VideoOptions"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingsMenu/Video/VideoPanel/VideoOptions/VSyncBox"]
layout_mode = 2
text = "VSync"

[node name="VSyncBtn" type="CheckButton" parent="SettingsMenu/Video/VideoPanel/VideoOptions/VSyncBox"]
layout_mode = 2

[node name="SaveBox" type="HBoxContainer" parent="SettingsMenu/Video/VideoPanel/VideoOptions"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Apply" type="Button" parent="SettingsMenu/Video/VideoPanel/VideoOptions/SaveBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Apply"

[node name="Reset" type="Button" parent="SettingsMenu/Video/VideoPanel/VideoOptions/SaveBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Reset"

[node name="HSeparator" type="HSeparator" parent="SettingsMenu/Video/VideoPanel/VideoOptions"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="Back" type="Button" parent="SettingsMenu/Video/VideoPanel/VideoOptions"]
custom_minimum_size = Vector2(300, 45)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_font_sizes/font_size = 30
text = "Back"

[node name="Audio" type="Control" parent="SettingsMenu"]
custom_minimum_size = Vector2(1000, 550)
layout_mode = 3
anchors_preset = 0
offset_left = -480.0
offset_top = -255.0
offset_right = 520.0
offset_bottom = 295.0

[node name="AudioPanel" type="Panel" parent="SettingsMenu/Audio"]
custom_minimum_size = Vector2(1000, 550)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="AudioOptions" type="BoxContainer" parent="SettingsMenu/Audio/AudioPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
vertical = true

[node name="MasterBox" type="HBoxContainer" parent="SettingsMenu/Audio/AudioPanel/AudioOptions"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingsMenu/Audio/AudioPanel/AudioOptions/MasterBox"]
layout_mode = 2
text = "Master: "

[node name="MasterSlider" type="HSlider" parent="SettingsMenu/Audio/AudioPanel/AudioOptions/MasterBox"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MusicBox" type="HBoxContainer" parent="SettingsMenu/Audio/AudioPanel/AudioOptions"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingsMenu/Audio/AudioPanel/AudioOptions/MusicBox"]
layout_mode = 2
size_flags_horizontal = 4
text = "Music: "

[node name="MusicSlider" type="HSlider" parent="SettingsMenu/Audio/AudioPanel/AudioOptions/MusicBox"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="EffectsBox" type="HBoxContainer" parent="SettingsMenu/Audio/AudioPanel/AudioOptions"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingsMenu/Audio/AudioPanel/AudioOptions/EffectsBox"]
layout_mode = 2
size_flags_horizontal = 4
text = "Effects:"

[node name="EffectsSlider" type="HSlider" parent="SettingsMenu/Audio/AudioPanel/AudioOptions/EffectsBox"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="HSeparator" type="HSeparator" parent="SettingsMenu/Audio/AudioPanel/AudioOptions"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="Back" type="Button" parent="SettingsMenu/Audio/AudioPanel/AudioOptions"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_font_sizes/font_size = 30
text = "Back"

[node name="Controls" type="Control" parent="SettingsMenu"]
visible = false
custom_minimum_size = Vector2(1000, 550)
layout_mode = 3
anchors_preset = 0
offset_left = -480.0
offset_top = -255.0
offset_right = 520.0
offset_bottom = 295.0

[node name="Controls" type="Panel" parent="SettingsMenu/Controls"]
custom_minimum_size = Vector2(1000, 550)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
